tests/purs/failing/2379.purs
-- @shouldFailWith UnknownClass
module Main where

import Lib

test = x [1, 2, 3]
